Cope with null enrichment from API
Happens if nothing saved yet.

--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -68,19 +68,19 @@
                 About this course
             </dt>
             <dd class="course-parts__fields__value">
-                @courseEnrichment.AboutCourse.DisplayText()
+                @courseEnrichment?.AboutCourse.DisplayText()
             </dd>
             <dt class="course-parts__fields__label">
                 Interview process (optional)
             </dt>
             <dd class="course-parts__fields__value">
-                @courseEnrichment.InterviewProcess.DisplayText()
+                @courseEnrichment?.InterviewProcess.DisplayText()
             </dd>
             <dt class="course-parts__fields__label">
                 How school placements work
             </dt>
             <dd class="course-parts__fields__value">
-                @courseEnrichment.HowSchoolPlacementsWork.DisplayText()
+                @courseEnrichment?.HowSchoolPlacementsWork.DisplayText()
             </dd>
           </dl>
         </div>
@@ -93,19 +93,19 @@
               Qualifications needed
             </dt>
             <dd class="course-parts__fields__value">
-                @courseEnrichment.Qualifications.DisplayText()
+                @courseEnrichment?.Qualifications.DisplayText()
             </dd>
             <dt class="course-parts__fields__label">
               Personal qualities (optional)
             </dt>
             <dd class="course-parts__fields__value">
-                @courseEnrichment.PersonalQualities.DisplayText()
+                @courseEnrichment?.PersonalQualities.DisplayText()
             </dd>
             <dt class="course-parts__fields__label">
               Other requirements (optional)
             </dt>
             <dd class="course-parts__fields__value">
-                @courseEnrichment.OtherRequirements.DisplayText()
+                @courseEnrichment?.OtherRequirements.DisplayText()
             </dd>
           </dl>
         </div>
