--- a/src/ui/Views/Course/Requirements.cshtml
+++ b/src/ui/Views/Course/Requirements.cshtml
@@ -12,7 +12,10 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form asp-controller="Course" asp-action="Requirements" method="post" data-module="form">
-        <h1 class="govuk-heading-xl">Requirements and eligibility</h1>
+        <h1 class="govuk-heading-xl">
+          <span class="govuk-caption-xl">@Model.CourseInfo.Name (@Model.CourseInfo.ProgrammeCode)</span>
+          Requirements and eligibility
+        </h1>
         @Html.Partial("ErrorSummary")
         <h3 class="govuk-heading-l">Qualifications needed</h3>
         <p class="govuk-body">State the minimum academic qualifications needed for this course, in addition to the basic national requirements.</p>
