Update styling for course not running notice

--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -9,6 +9,7 @@ $govuk-global-styles: true;
 @import "components/character-count";
 @import "patterns/course-parts";
 @import "patterns/success-summary";
+@import "patterns/notice-summary";
 @import "patterns/definition-list";
 
 // GOVU.UK Tabs without border around entire component
