--- a/src/ui/Views/Shared/_Alerts.cshtml
+++ b/src/ui/Views/Shared/_Alerts.cshtml
@@ -7,7 +7,7 @@
 @if (type != null)
 {
   <div class="govuk-@type-summary" role="alert">
-    <h3 class="govuk-heading-m govuk-@type-summary__title">@title</h3>
+    <h3 class="govuk-heading-m govuk-@type-@type__title">@title</h3>
 
     @if (body != null)
     {
