Course publishing shown in UI; link to search and compare; preview view shared with search and compare; publish and preview hidden behind separate feature flags

--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -132,5 +132,72 @@
         <a href="@link" class="govuk-link">Contact the Becoming a Teacher team to report a problem</a>
       </p>
     </div>
+
+    <div class="govuk-grid-column-one-third">
+
+      <aside class="related">
+        @switch(courseEnrichment.DeterminePublicationState())
+        {
+          case WorkflowStatus.Blank:
+            <div class="govuk-tag__empty add-bottom-margin">empty</div>
+            break;
+          case WorkflowStatus.SubsequentDraft:
+            <div class="govuk-tag__draft add-bottom-margin">draft</div>
+            break;
+          case WorkflowStatus.Published:
+            <div class="govuk-tag__published add-bottom-margin">published</div>
+            break;
+        }
+
+        @if (courseEnrichment.DeterminePublicationState() == WorkflowStatus.Blank)
+        {          
+            <p class="govuk-body">You need to complete and publish this information.</p>
+            <hr class="related__section-break">
+        }
+
+        @if (courseEnrichment.DeterminePublicationState() == WorkflowStatus.SubsequentDraft)
+        {          
+            <p class="govuk-body">You have unpublished changes.</p>
+            <p class="govuk-body">Last saved:<br />@courseEnrichment.DraftLastUpdatedUtc.DateString()</p>
+            <hr class="related__section-break">
+        }
+
+        @if (courseEnrichment.LastPublishedUtc.HasValue)
+        {          
+            <p class="govuk-body">Last published:<br />@courseEnrichment.LastPublishedUtc.DateString()</p>
+            <hr class="related__section-break">
+        }
+
+        @if (courseEnrichment.DeterminePublicationState() != WorkflowStatus.Published)
+        {
+
+            if(Model.AllowPreview)
+            {
+              <h4 class="govuk-heading-m">Preview</h4> 
+              <p class="govuk-body">See how this course looks with your changes.</p>
+              <p class="govuk-body">Preview your course to check for mistakes before publishing.</p>
+              <p class="govuk-body"><a asp-action="Preview">Preview course</a></p>
+
+              <hr class="related__section-break">
+            }       
+
+            if(Model.AllowPublish)
+            { 
+              <h4 class="govuk-heading-m">Publish</h4>
+              <p class="govuk-body">Publish your changes for applicants to see them.</p>
+
+              <form asp-controller="Course" asp-action="Publish" method="post">
+                <input type="submit" class="govuk-button" value="Publish" />
+              </form>
+
+              <hr class="related__section-break">
+            }            
+        }
+
+        <h4 class="govuk-heading-m">View on website</h4>
+        <p class="govuk-body">See how this course currently looks to applicants:</p>
+        <p class="govuk-body"><a href="@Model.CurrentUrl">View on website</a></p>
+      </aside>
+    </div>
   </div>
 </main>
