--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -7,9 +7,11 @@ $govuk-global-styles: true;
 @import "components/cookie-banner";
 @import "components/related";
 @import "components/character-count";
+@import "components/publish-tags";
 @import "patterns/course-parts";
 @import "patterns/success-summary";
 @import "patterns/definition-list";
+@import "patterns/add-bottom-margin";
 
 // GOVU.UK Tabs without border around entire component
 .govuk-tabs__panel--without-border {
