--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -5,6 +5,8 @@ $govuk-global-styles: true;
 
 @import "node_modules/govuk-frontend/all";
 @import "components/cookie-banner";
+@import "components/preview-banner";
+@import "components/missing-section";
 @import "components/related";
 @import "components/character-count";
 @import "components/publish-tags";
