--- a/src/ui/Assets/Styles/components/_publish-tags.scss
+++ b/src/ui/Assets/Styles/components/_publish-tags.scss
@@ -1,23 +1,17 @@
-@import "node_modules/govuk-frontend/components/tag/tag";
-@import "node_modules/govuk-frontend/helpers/colour";
-
-.govuk-tag__empty
-{
-    @extend .govuk-tag;
-    background: govuk-colour("white");
-    color: govuk-colour("grey-1");
-    border: 2px solid govuk-colour("grey-2");
-    margin-top: -1px;
+.govuk-tag {
+  margin-bottom: govuk-spacing(3);
 }
 
-.govuk-tag__draft
-{
-    @extend .govuk-tag;
-    background: govuk-colour("orange");
+.govuk-tag--blank {
+  background: govuk-colour("white");
+  color: govuk-colour("grey-1");
+  border: 2px solid govuk-colour("grey-2");
 }
 
-.govuk-tag__published
-{
-    @extend .govuk-tag;
-    background: #00823b //$govuk-button-colour;
+.govuk-tag--draft {
+  background: govuk-colour("orange");
+}
+
+.govuk-tag--published {
+  background: govuk-colour("blue");
 }
