--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -13,6 +13,7 @@ $govuk-global-styles: true;
 @import "patterns/course-parts";
 @import "patterns/success-summary";
 @import "patterns/definition-list";
+@import "patterns/currency-input";
 
 // GOVU.UK Tabs without border around entire component
 .govuk-tabs__panel--without-border {
