--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -10,7 +10,6 @@
 
 <a href="@Url.Action("Courses", "Organisation", new {ucasCode = Model.Course.UcasCode})" class="govuk-back-link">Back</a>
 
-@Html.Partial("~/Views/Shared/_Alerts.cshtml")
 @Html.Partial("Shared/ErrorSummary.cshtml")
 
 <main role="main" class="govuk-main-wrapper" id="main-content">
@@ -19,6 +18,8 @@
     @Model.Course.Name (@Model.Course.ProgrammeCode)
   </h1>
 
+  @Html.Partial("~/Views/Shared/_Alerts.cshtml")
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <div class="course-parts">
@@ -26,6 +27,11 @@
           <h3 class="course-parts__title">Information from UCAS</h3>
 
           <dl class="govuk-list govuk-list--description">
+            @if (!string.IsNullOrEmpty(@Model.Course.Status))
+            {
+              <dt>Status:</dt>
+              <dd>@Model.Course.Status</dd>
+            }
             @if (!string.IsNullOrEmpty(@Model.Course.Name)) {
               <dt>Name:</dt>
               <dd>@Model.Course.Name</dd>
@@ -120,6 +126,11 @@
               @if (!string.IsNullOrEmpty(@school.Address)) {
                 <dt>Address:</dt>
                 <dd>@school.Address</dd>
+              }
+              @if (!string.IsNullOrEmpty(@school.Status))
+              {
+                <dt>Status:</dt>
+                <dd>@school.GetSchoolStatus()</dd>
               }
               @if (!string.IsNullOrEmpty(@school.ApplicationsAcceptedFrom)) {
                 <dt>Apply from:</dt>
