Rename alert message body
To make it clear the content will not be html encoded on output.
Couldn't out an HtmlString through it as temp data is only string
storage.

--- a/src/ui/Views/Shared/_Alerts.cshtml
+++ b/src/ui/Views/Shared/_Alerts.cshtml
@@ -1,7 +1,7 @@
 @{
   var type = (string)TempData.Get("MessageType");
   var title = (string)TempData.Get("MessageTitle");
-  var body = (string)TempData.Get("MessageBody");
+  var body = (string)TempData.Get("MessageBodyHtml");
 }
 
 @if (type != null)
