Surface course status (#115)
* Showing status

* Added unit tests

* New Api Version number

* Adde alert message box for non running courses

* Api version num updated

* Update styling for course not running notice

* Fixed failing tests. Now using fluent assertions

* Fixed bug with gui

* Updated Api version

* Changed status text

* Added/fixed unit tests

* Fix up styling of title in alert partial

* Remove commented out code

* Update location of status notice message

* Add ucas link to new course content

* Changed logic in GetCourseStatus method

* Put course and school status back after bad merge

* Rename alert message body

To make it clear the content will not be html encoded on output.
Couldn't out an HtmlString through it as temp data is only string
storage.

--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -12,6 +12,7 @@ $govuk-global-styles: true;
 @import "components/publish-tags";
 @import "patterns/course-parts";
 @import "patterns/success-summary";
+@import "patterns/notice-summary";
 @import "patterns/definition-list";
 
 // GOVU.UK Tabs without border around entire component
