Fixed html semantics

--- a/src/ui/Views/Course/Fees.cshtml
+++ b/src/ui/Views/Course/Fees.cshtml
@@ -53,7 +53,7 @@
           <div class="govuk-currency-input">
             <div class="govuk-currency-input__inner">
               <span class="govuk-currency-input__inner__unit">£</span>
-              <input asp-for="FeeUkEu" type="number" class="govuk-currency-input__inner__input govuk-input govuk-input--width-10"></textarea>
+              <input asp-for="FeeUkEu" type="number" class="govuk-currency-input__inner__input govuk-input govuk-input--width-10"></input>
             </div>
           </div>
         </div>
@@ -65,7 +65,7 @@
           <div class="govuk-currency-input">
             <div class="govuk-currency-input__inner">
               <span class="govuk-currency-input__inner__unit">£</span>
-              <input asp-for="FeeInternational" type="number" class="govuk-currency-input__inner__input govuk-input govuk-input--width-10"></textarea>
+              <input asp-for="FeeInternational" type="number" class="govuk-currency-input__inner__input govuk-input govuk-input--width-10"></input>
             </div>
           </div>
         </div>
